--- a/css/styles-contact.css
+++ b/css/styles-contact.css
@@ -68,4 +68,17 @@ input[type=submit]:hover {
 
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 650px) {}
+@media screen and (min-width: 650px) {
+  .contact-content img {
+    width: 50%;
+}
+
+.contact-content {
+  display: flex;
+  flex-direction: row;
+}
+.contact-content form {
+  width: 50%;
+}
+
+}
